--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Dive App">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="/favicon.ico">
         <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
         <link rel="mask-icon" href="/pwa-512x512.png" color="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
